TS-126 Fixed industries images

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9515,6 +9515,9 @@ form [type="submit"],
 
 @media screen and (max-width:480px) {
 
+    .industries-mob .industries-slider .industry-card div img {
+        height: auto;
+    }
     #planets_header_desktop,
     #planets_body_desktop {
         display: none;
