--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9542,7 +9542,7 @@ form [type="submit"],
     .wide-gallery-root .wide-gallery-slider .wide-gallery-card,
     .wide-gallery-root .wide-gallery-slider .wide-gallery-card .wide-gallery-image {
         width: 310px !important;
-        margin-bottom: 20px;
+        margin-bottom: 20px !important;
         -webkit-user-select: none;
         user-select: none;
     }
@@ -9661,7 +9661,7 @@ form [type="submit"],
         display: none;
     }
     .wide-gallery-root .wide-gallery-slider .wide-gallery-card {
-        margin: 20px 0 60px 22px !important;
+        margin: 40px 16px 60px 16px !important;
     }
     .wide-gallery-root .gallery-heading {
         font-size: 40px !important;
