DS/TS-124 Mobile. Fixed issues with forms and forms submission window

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9308,6 +9308,15 @@ footer a:hover {
         -webkit-text-decoration-line: none;
         text-decoration-line: none
     }
+
+    .text-input .letters-counter {
+        bottom: 16px;
+        right: 14px;
+    }
+
+    .pum-title {
+        font-weight: 400 !important;
+    }
 }
 
 .industries {
