--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -8963,6 +8963,10 @@ footer a:hover {
     position: relative
 }
 
+.checkbox-root > p:not(.Body) {
+    display: flex;
+}
+
 .checkbox-root .checkbox-error {
     color: var(--navy-blue);
     font-size: 12px;
@@ -9021,7 +9025,10 @@ footer a:hover {
 
 .checkbox.path {
     top: 2px;
-    margin-right: 25px;
+    width: 20px;
+    height: 20px;
+    display: block;
+    cursor: none;
 }
 
 .checkbox.path input:checked {
