DS/TS-148 Fixed scrollbar after submission form

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -12289,3 +12289,7 @@ span.wpcf7-not-valid-tip { display: none; }
 .quotes .hint {
     display: none;
 }
+
+.pum {
+    overflow: hidden !important;
+}
