--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9693,6 +9693,9 @@ form [type="submit"],
 .main-menu .up .main-links {
     margin: auto 0;
 }
+.mob-link.color-white.mob_title {
+    text-decoration: none;
+}
 @media screen and (min-width:481px) {
 
     #planets_mobile {
@@ -9788,7 +9791,7 @@ form [type="submit"],
     .services-title {
         align-items: center;
         display: flex;
-        margin-top: 130px;
+        margin-top: 120px;
         padding-inline: 32px;
         width: 100%;
         position: absolute;
