--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -12293,6 +12293,7 @@ span.wpcf7-not-valid-tip { display: none; }
 
 .codedropz-upload-handler {
     border: none!important;
+    margin-bottom: 0 !important;
 }
 
 .dnd-upload-counter {
