DS/TS-148 Fixed moving content after from submission

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -12311,3 +12311,7 @@ span.wpcf7-not-valid-tip { display: none; }
 .pum {
     overflow: hidden !important;
 }
+
+html.pum-open.pum-open-overlay.pum-open-scrollable body>:not([aria-modal=true]) {
+    padding-right: 6px !important;
+}
