--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9749,6 +9749,10 @@ form [type="submit"],
     .services-tree .prod_container .single .desc .main{
         font-size: 24px;
     }
+    .services-tree .prod_container .single .desc a{
+        font-size: 14px;
+        color: #333333;
+    }
 }
 @media screen and (min-width:426px) {
 
