--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9715,6 +9715,7 @@ form [type="submit"],
 .services-tree .prod_container .single .desc a{
     font-size: 14px;
     color: #333333;
+    text-decoration: underline;
 }
 
 .single-page-template .module-container img {
