TS-149 Fixed styles

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9718,6 +9718,9 @@ form [type="submit"],
     font-size: 18px;
     font-family: 'Commissioner', sans-serif;
 }
+.services-tree .prod_container .single .desc .sub_page_link{
+    padding-left: 16px;
+}
 
 .services-tree .prod_container .single .desc a{
     font-size: 16px;
