TS-149 Fixed styles

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9759,6 +9759,7 @@ form [type="submit"],
     
     .services-tree .prod_container .single .img {
         height: 200px;
+        margin-bottom: 12px;
     }
     .services-tree .prod_container .single .img img {
         height: 100%;
