--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9718,6 +9718,7 @@ form [type="submit"],
     font-weight: 600;
     font-size: 18px;
     font-family: 'Commissioner', sans-serif;
+    line-height: 22.4px;
 }
 .services-tree .prod_container .single .desc .sub_page_link{
     padding-left: 16px;
@@ -9770,6 +9771,13 @@ form [type="submit"],
     }
     .services-tree .prod_container .single .desc .main{
         font-size: 24px;
+    }
+    .services-tree .prod_container .single .desc a {
+        font-size: 14px;
+        line-height: 19.6px;
+    }
+    .services-tree .prod_container .single .desc .sub_page_title {
+        font-size: 16px;
     }
 }
 @media screen and (min-width:426px) {
