TS-149 Fixed styles

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9719,6 +9719,7 @@ form [type="submit"],
     font-size: 18px;
     font-family: 'Commissioner', sans-serif;
     line-height: 22.4px;
+    margin-top: 8px;
 }
 .services-tree .prod_container .single .desc .sub_page_link{
     padding-left: 16px;
