TS-149 Fixed styles

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9707,11 +9707,14 @@ form [type="submit"],
 .services-tree .prod_container .single .img{
 }
 
+.services-tree .prod_container .single .desc .simple_link{
+}
 .services-tree .prod_container .single .desc .main{
     font-weight: 600;
     font-family: 'Commissioner', sans-serif;
     font-size: 24px;
     line-height: 29.35px;
+    margin-bottom: 12px;
 }
 
 .services-tree .prod_container .single .desc .sub_page_title{
