--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -10097,6 +10097,10 @@ form [type="submit"],
         -webkit-writing-mode: vertical-rl;
         writing-mode: vertical-rl
     }
+
+    .services-slider .product-card .product-title .H2 {
+        font-size: 60px;
+    }
 }
 
 @media screen and (max-width:1200px)and (min-width:480px)and (orientation:portrait) {
