TS-149 Fixed styles

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -6257,6 +6257,7 @@ header .root {
 
 .services-slider .product-card .product-title .H2{
     font-size: 94px;
+    line-height: 54px;
 }
 .services-slider .product-card .product-title {
     position: absolute;
