--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9943,10 +9943,10 @@ form [type="submit"],
         display: flex;
         width: 820px;
     }
-
-    .services-tree .prod_container .single {
-        width: 50%;
+    .services-tree .prod_container {
+        width: 820px;
     }
+
 }
 
 @media screen and (max-width:1024px) {
@@ -9963,6 +9963,10 @@ form [type="submit"],
 
 @media screen and (min-width:1025px) {
 
+    .services-tree .prod_container .single {
+        width: 50%;
+    }
+    
     #cards-tree-mob,
     #top_section_mob {
         display: none;
