TS-149 Fixed styles

--- a/themes/twentytwentyfour/assets/css/style.css
+++ b/themes/twentytwentyfour/assets/css/style.css
@@ -9728,6 +9728,10 @@ form [type="submit"],
     line-height: 22.4px;
     margin-top: 8px;
 }
+.services-tree .prod_container .single .desc .sub_page_link.sub3_level {
+    padding-left: 32px;
+}
+.services-tree .prod_container .single .desc .sub_page_title.sub3_level,
 .services-tree .prod_container .single .desc .sub_page_link{
     padding-left: 16px;
 }
